# nhl-commentary-core

./: .env.example  .gitignore  CLAUDE.md  README.md  api-discovery.ipynb  config.py  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
api/: app.py
data/: fetch_nhl_data.py
data/events/: 2018020046.jsonl  2022020839.jsonl  2023020436.jsonl  2024020286.jsonl  2024020432.jsonl  2024020689.jsonl  2024020950.jsonl  2024021182.jsonl  2024021183.jsonl  2024021184.jsonl  2024021185.jsonl  2024021186.jsonl  2024021187.jsonl  2024021188.jsonl  2024021189.jsonl  2024021190.jsonl  2024021191.jsonl
data_fetch/: __init__.py  editorial.py  game_story.py  play_by_play.py  schedule.py  season_series.py  standings.py
engine/: __init__.py  ai_summary.py  batch.py  date_index.py  generate_summary.py  process_game.py  summaries.py  summarize_game.py  transform.py
engine/event_handlers/: __init__.py  blocked_shot.py  delayed_penalty.py  faceoff.py  giveaway.py  goal.py  (+5 more)
gcp_ingestion/: __init__.py  storage.py
models/: __init__.py  game_schedule.py  game_summary.py
nhl_commentary_core/: __init__.py  __main__.py  cli.py
notebooks/: api-discovery.ipynb
prompts/: game_summary.txt
tests/: test_ai_summary.py  test_api.py  test_batch.py  test_config.py  test_editorial.py  test_game_summary_model.py  test_generate_summary.py  test_main_entrypoint.py  test_play_by_play_cache.py  test_process_game.py  test_schedule_index.py  test_season_series.py  test_standings.py  test_storage.py  test_summarize_game.py  test_transform.py
