[project]
name = "nhl-commentary-core"
version = "0.1.0"
description = "Core components for NHL commentary"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
nhl-commentary = "nhl_commentary_core.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
