[project]
name = "nhl-commentary-core"
version = "0.1.0"
description = "Core components for NHL commentary"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
nhl-commentary = "nhl_commentary_core.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
exclude = ["notebooks"]

[tool.ruff.lint]
per-file-ignores = {"tests/**" = ["E402"]}

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "engine.generate_summary"
ignore_errors = true
